fix whitespace on bottom of some devices

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@ body {
   background: url('/assets/background.svg');
   background-repeat: no-repeat;
   background-size: 100%;
+  background-repeat: repeat;
 }
 
 i, .unselect {
